--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -2,10 +2,16 @@
   "name": "@ds.e/react",
   "version": "1.0.0",
   "main": "index.js",
+  "type":"module",
   "license": "MIT",
   "devDependencies": {
     "@types/react": "^18.2.45",
     "react": "^18.2.0",
+    "rollup": "^4.9.1",
+    "rollup-plugin-typescript2": "^0.36.0",
     "typescript": "^5.3.3"
+  },
+  "scripts": {
+    "build":"rollup -c"
   }
 }
