--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "private":true,
   "workspaces":{
     "packages": [
-      "packages/*"
+      "packages/*",
+      "playgrounds/*"
     ],
     "nohoist": [
       "**/normalize-scss"
