--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ds.e/react",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "lib/index.js",
   "type":"module",
   "license": "MIT",
   "devDependencies": {
