setup-dev-script-for-all-packages

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -12,6 +12,7 @@
     "typescript": "^5.3.3"
   },
   "scripts": {
-    "build":"rollup -c"
+    "build":"rollup -c",
+    "dev": "yarn build --watch"
   }
 }
