--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "To demonstrate implementation of monorepos",
   "main": "index.js",
   "scripts": {
-    "build":"yarn lerna run build"
+    "build":"yarn lerna run build",
+    "dev": "yarn lerna run dev"
   },
   "author": "",
   "license": "ISC",
