--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "monorepo-core",
+  "name": "mono-mrinal",
   "version": "1.0.0",
   "description": "To demonstrate implementation of monorepos",
   "main": "index.js",
