--- a/packages/foundation/package.json
+++ b/packages/foundation/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "main": "lib/index.js",
   "license": "MIT",
+  "files": [
+    "lib"
+  ],
   "devDependencies": {
     "typescript": "^5.3.3"
   },
