--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -4,6 +4,7 @@
   "main": "lib/index.js",
   "type": "module",
   "license": "MIT",
+  "files": ["lib"],
   "devDependencies": {
     "@types/react": "^18.2.45",
     "react": "^18.2.0",
