--- a/packages/scss/package.json
+++ b/packages/scss/package.json
@@ -12,6 +12,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "files": ["lib","src"],
   "dependencies": {
     "lint-staged": "^15.2.0",
     "node-sass": "^9.0.0",
