--- a/packages/scss/package.json
+++ b/packages/scss/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mono-mrinal/scss",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "files": ["lib","src"],
+  "files": [
+    "lib",
+    "src"
+  ],
   "dependencies": {
     "lint-staged": "^15.2.0",
     "node-sass": "^9.0.0",
