--- a/lerna.json
+++ b/lerna.json
@@ -4,5 +4,10 @@
     "packages/*"
   ],
   "npmClient": "yarn",
-  "stream": true
+  "stream": true,
+  "command":{
+    "publish":{
+      "conventionalCommits":true
+    }
+  }
 }
